--- a/package.json
+++ b/package.json
@@ -48,7 +48,24 @@
     "rxjs": "7.5.0",
     "socicon": "3.0.5",
     "tslib": "2.3.0",
-    "zone.js": "0.11.4"
+    "zone.js": "0.11.4",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "@types/socket.io": "^2.1.10",
+    "cors": "^2.8.5",
+    "crypto-js": "3.3.0",
+    "ejs": "^3.1.7",
+    "express": "^4.18.1",
+    "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "ngx-socket-io": "^3.0.1",
+    "path": "^0.12.7",
+    "pg": "^8.7.1",
+    "quill": "1.3.7",
+    "sequelize": "^6.13.0",
+    "sharp": "^0.30.3",
+    "socket.io": "^3.1.2",
+    "webp-converter": "^2.3.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "13.2.5",
