--- a/package.json
+++ b/package.json
@@ -31,41 +31,42 @@
     "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "7.0.0",
     "@popperjs/core": "2.11.2",
+    "@types/socket.io": "^2.1.10",
     "angular-in-memory-web-api": "0.13.0",
     "animate.css": "4.1.1",
     "apexcharts": "^3.27.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "bootstrap": "5.1.3",
     "bootstrap-icons": "1.8.1",
     "clipboard": "2.0.10",
-    "line-awesome": "1.3.0",
-    "ng-apexcharts": "1.7.0",
-    "ng-inline-svg-2": "14.0.1",
-    "ngx-clipboard": "15.0.1",
-    "nouislider": "15.5.1",
-    "object-path": "0.11.8",
-    "prism-themes": "1.9.0",
-    "prismjs": "1.27.0",
-    "rxjs": "7.5.0",
-    "socicon": "3.0.5",
-    "tslib": "2.3.0",
-    "zone.js": "0.11.4",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.0",
-    "@types/socket.io": "^2.1.10",
     "cors": "^2.8.5",
     "crypto-js": "3.3.0",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
     "fs": "0.0.1-security",
+    "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
+    "line-awesome": "1.3.0",
+    "ng-apexcharts": "1.7.0",
+    "ng-inline-svg-2": "14.0.1",
+    "ngx-clipboard": "15.0.1",
     "ngx-socket-io": "^3.0.1",
+    "nouislider": "15.5.1",
+    "object-path": "0.11.8",
     "path": "^0.12.7",
     "pg": "^8.7.1",
+    "prism-themes": "1.9.0",
+    "prismjs": "1.27.0",
     "quill": "1.3.7",
+    "rxjs": "7.5.0",
     "sequelize": "^6.13.0",
     "sharp": "^0.30.3",
+    "socicon": "3.0.5",
     "socket.io": "^3.1.2",
-    "webp-converter": "^2.3.3"
+    "tslib": "2.3.0",
+    "webp-converter": "^2.3.3",
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "13.2.5",
