--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ng-inline-svg-2": "14.0.1",
     "ngx-clipboard": "15.0.1",
     "ngx-socket-io": "^3.0.1",
+    "nodemailer": "^6.7.6",
     "nouislider": "15.5.1",
     "object-path": "0.11.8",
     "path": "^0.12.7",
