--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "clipboard": "2.0.10",
     "cors": "^2.8.5",
     "crypto-js": "3.3.0",
+    "drawflow": "0.0.59",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
     "fs": "0.0.1-security",
@@ -78,6 +79,7 @@
     "@angular/cli": "13.2.5",
     "@angular/compiler-cli": "13.2.5",
     "@types/bootstrap": "5.1.9",
+    "@types/drawflow": "0.0.4",
     "@types/jasmine": "3.10.0",
     "@types/node": "12.11.1",
     "@types/object-path": "0.11.1",
