--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngx-translate/http-loader": "7.0.0",
     "@popperjs/core": "2.11.2",
     "@types/socket.io": "^2.1.10",
+    "@videogular/ngx-videogular": "^6.0.0",
     "angular-in-memory-web-api": "0.13.0",
     "animate.css": "4.1.1",
     "apexcharts": "^3.27.2",
@@ -53,12 +54,14 @@
     "ng-inline-svg-2": "14.0.1",
     "ngx-clipboard": "15.0.1",
     "ngx-password-strength-meter": "^1.1.1",
+    "ngx-plyr": "^4.0.1",
     "ngx-socket-io": "^3.0.1",
     "nodemailer": "^6.7.7",
     "nouislider": "15.5.1",
     "object-path": "0.11.8",
     "path": "^0.12.7",
     "pg": "^8.7.1",
+    "plyr": "^3.7.2",
     "prism-themes": "1.9.0",
     "prismjs": "1.27.0",
     "quill": "1.3.7",
@@ -81,6 +84,7 @@
     "@angular/cli": "13.2.5",
     "@angular/compiler-cli": "13.2.5",
     "@types/bootstrap": "5.1.9",
+    "@types/core-js": "^2.5.5",
     "@types/drawflow": "0.0.4",
     "@types/jasmine": "3.10.0",
     "@types/node": "12.11.1",
