--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "demo1",
   "version": "8.0.38",
   "engines": {
-    "node": "12.*",
-    "npm": "6.x"
+    "node": "12.22.3",
+    "npm": "6.14.3"
   },
   "scripts": {
     "ng": "ng",
