--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "npm": "6.14.3"
   },
   "scripts": {
+    "heroku-postbuild": "ng build --prod",
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
