--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "demo1",
   "version": "8.0.38",
   "engines": {
-    "node": "12.22.3",
-    "npm": "6.14.3"
+    "node": "12.22.*",
+    "npm": "6.14.*"
   },
   "scripts": {
     "heroku-postbuild": "ng build --prod",
