--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bootstrap": "5.1.3",
     "bootstrap-icons": "1.8.1",
     "clipboard": "2.0.10",
+    "cloudinary": "^1.30.1",
     "cors": "^2.8.5",
     "crypto-js": "3.3.0",
     "drawflow": "0.0.59",
@@ -50,6 +51,7 @@
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "line-awesome": "1.3.0",
+    "multer": "^1.4.5-lts.1",
     "ng-apexcharts": "1.7.0",
     "ng-inline-svg-2": "14.0.1",
     "ngx-clipboard": "15.0.1",
