--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "13.2.5",
     "@angular/animations": "13.2.5",
     "@angular/cdk": "13.2.5",
-    "@angular/common": "13.2.5",
     "@angular/cli": "13.2.5",
-    "@angular/compiler-cli": "13.2.5",
-    "@angular-devkit/build-angular": "13.2.5",
+    "@angular/common": "13.2.5",
     "@angular/compiler": "13.2.5",
+    "@angular/compiler-cli": "13.2.5",
     "@angular/core": "13.2.5",
     "@angular/forms": "13.2.5",
     "@angular/material": "13.2.5",
@@ -76,10 +76,11 @@
     "sharp": "^0.30.3",
     "socicon": "3.0.5",
     "socket.io": "^3.1.2",
+    "sweetalert2": "^11.4.26",
     "tslib": "2.3.0",
+    "typescript": "4.5.2",
     "webp-converter": "^2.3.3",
-    "zone.js": "0.11.4",
-    "typescript": "4.5.2"
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
     "@angular-eslint/builder": "13.1.0",
