--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cloudinary": "^1.30.1",
     "cors": "^2.8.5",
     "crypto-js": "3.3.0",
+    "dotenv": "^16.0.2",
     "drawflow": "0.0.59",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
