--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "line-awesome": "1.3.0",
+    "maxlength-contenteditable": "^1.0.1",
     "multer": "^1.4.5-lts.1",
     "ng-apexcharts": "1.7.0",
     "ng-inline-svg-2": "14.0.1",
