--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "drawflow": "0.0.59",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
+    "firebase": "^9.14.0",
     "fs": "0.0.1-security",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
