--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "7.0.0",
     "@popperjs/core": "2.11.2",
+    "@techiediaries/ngx-qrcode": "^9.1.0",
     "@types/socket.io": "^2.1.10",
     "@videogular/ngx-videogular": "^6.0.0",
     "angular-cd-timer": "^3.0.0",
@@ -62,6 +63,7 @@
     "ng-apexcharts": "1.7.0",
     "ng-inline-svg-2": "14.0.1",
     "ngx-clipboard": "15.0.1",
+    "ngx-dropzone": "^3.1.0",
     "ngx-password-strength-meter": "^1.1.1",
     "ngx-plyr": "^4.0.1",
     "ngx-socket-io": "^3.0.1",
