--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "express": "^4.18.1",
     "firebase": "^9.14.0",
     "fs": "0.0.1-security",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "line-awesome": "1.3.0",
