--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.5.1",
     "line-awesome": "1.3.0",
     "maxlength-contenteditable": "^1.0.1",
     "multer": "^1.4.5-lts.1",
